@@ -2168,6 +2168,20 @@ EAPI void             edje_object_part_text_select_all              (const Evas_
 EAPI void             edje_object_part_text_insert                  (Evas_Object *obj, const char *part, const char *text);
 
 /**
+ * @brief Insert text for an object part.
+ *
+ * @param obj A valid Evas Object handle
+ * @param part The part name
+ * @param text The text string
+ *
+ * This function inserts the text for an object part at the end; It does not
+ * move the cursor.
+ *
+ * @since 1.1
+ */
+EAPI void             edje_object_part_text_append(Evas_Object *obj, const char *part, const char *text);
+
+/**
  * @brief Return a list of char anchor names.
  *
  * @param obj A valid Evas_Object handle
